src/objects/OCIO_OGC_Case_Contact_Litigation_Hold__c.object
<CustomObject>
    <description>Related contacts and litigation hold details for OGC Case Tracking.</description>
    <fields>
        <fullName>Address_OGC_Case_Contact__c</fullName>
        <formula>Name_OGC_Case_Contact__r.MailingStreet  &amp; BR() &amp; Name_OGC_Case_Contact__r.MailingCity &amp;&quot;,  &quot; &amp; Name_OGC_Case_Contact__r.MailingState &amp;&quot; &quot;&amp;  Name_OGC_Case_Contact__r.MailingPostalCode &amp; BR() &amp; Name_OGC_Case_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <description>Notes for contact.</description>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_s_Account__c</fullName>
        <formula>Name_OGC_Case_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_OGC_Case_Contact__c</fullName>
        <formula>Name_OGC_Case_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Hold_Issued_Date__c</fullName>
        <label>Litigation Hold Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mediator_Expert_Rating__c</fullName>
        <label>Mediator/Expert Rating</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Relationship_OGC_Case_Contact__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Recommended</fullName>
                </value>
                <value>
                    <fullName>2 - Acceptable, Some Reservations</fullName>
                </value>
                <value>
                    <fullName>3 - Acceptable, Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Recommended</fullName>
                </value>
                <value>
                    <fullName>5 - Highly Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mediator_Expert_Subject_Matter__c</fullName>
        <label>Mediator/Expert Subject Matter</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_OGC_Case_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Name</description>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OGC Case Contacts/ Litigation Holds</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OGC_CASE__c</fullName>
        <label>OGC Matter Title/Name</label>
        <referenceTo>OCIO_OGC_Case_Tracking__c</referenceTo>
        <relationshipLabel>OGC Case Contacts/ Litigation Holds</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_OGC_Case_Contact__c</fullName>
        <formula>Name_OGC_Case_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Custodian_for_Litigation_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Custodian for Litigation Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_OGC_Case_Contact__c</fullName>
        <description>OGC Case related contacts and their relationship</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claimant/Adverse Party</fullName>
                </value>
                <value>
                    <fullName>Client Contact</fullName>
                </value>
                <value>
                    <fullName>Co-Counsel</fullName>
                </value>
                <value>
                    <fullName>Contracting Officer</fullName>
                </value>
                <value>
                    <fullName>DOJ Attorney</fullName>
                </value>
                <value>
                    <fullName>Expert Witness/Consultant</fullName>
                </value>
                <value>
                    <fullName>Fact Witness</fullName>
                </value>
                <value>
                    <fullName>GAO Attorney</fullName>
                </value>
                <value>
                    <fullName>Judge</fullName>
                </value>
                <value>
                    <fullName>Opposing Counsel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lead Counsel</fullName>
                </value>
                <value>
                    <fullName>Mediator</fullName>
                </value>
                <value>
                    <fullName>Intervenor&apos;s Counsel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OGC Case Contact/ Litigation Hold</label>
    <nameField>
        <displayFormat>OGC Case Contact-{0000}</displayFormat>
        <label>OGC Case Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OGC Case Contacts/ Litigation Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Litigation_Hold_Issued_Date_Required</fullName>
        <active>true</active>
        <description>The &quot;Litigation Hold Issued Date&quot; must be required if the contact relationship is &quot;record custodian for litigation hold.&quot;</description>
        <errorConditionFormula>AND (Record_Custodian_for_Litigation_Hold__c=TRUE, ISBLANK(Litigation_Hold_Issued_Date__c ))</errorConditionFormula>
        <errorDisplayField>Litigation_Hold_Issued_Date__c</errorDisplayField>
        <errorMessage>Litigation Hold Issued Date must be filled in if the contact relationship is &quot;Record Custodian for Litigation Hold.&quot;</errorMessage>
    </validationRules>
</CustomObject>